# devops-3

./: Dockerfile  FuncA  FuncA.cpp  FuncA.h  HTTPserver.cpp  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  configure~  deb.deb  main.cpp  myprogram  nginx.conf  scriptA.sh  scriptB.sh  test
.deps/: FuncA.Po  HTTPserver.Po
.github/workflows/: automake.yml  ci.yml  debian.yml  docker-mulriarch.yml  tests.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
debian/: autoreconf.after  autoreconf.before  changelog  control  files  myprogram.substvars
debian/.debhelper/myprogram/: dbgsym-build-ids
debian/.debhelper/myprogram/dbgsym-root/DEBIAN/: control  md5sums
debian/myprogram/DEBIAN/: control  md5sums
tests/: testFuncA.cpp
tests/.deps/: testFuncA.Po
